fix: modify the ingress resource
Signed-off-by: Mariam Fahmy <mariam.fahmy@nirmata.com>

--- a/other-cel/require-ingress-https/.chainsaw-test/ingress-good.yaml
+++ b/other-cel/require-ingress-https/.chainsaw-test/ingress-good.yaml
@@ -9,7 +9,7 @@ spec:
   ingressClassName: someingress
   rules:
   - host: endpoint01
-    https:
+    http:
       paths:
       - backend:
           service:
@@ -33,7 +33,7 @@ spec:
   ingressClassName: nginx-int
   rules:
   - host: endpoint01
-    https:
+    http:
       paths:
       - path: /testpath
         pathType: Prefix
@@ -43,7 +43,7 @@ spec:
             port:
               number: 80
   - host: endpoint02
-    https:
+    http:
       paths:
       - path: /testpath
         pathType: Prefix
@@ -56,4 +56,3 @@ spec:
   - hosts:
     - endpoint01
     - endpoint02
-
