--- a/other-cel/restrict-ingress-classes/.chainsaw-test/ingress-bad.yaml
+++ b/other-cel/restrict-ingress-classes/.chainsaw-test/ingress-bad.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   rules:
   - host: endpoint01
-    https:
+    http:
       paths:
       - backend:
           service:
@@ -27,7 +27,7 @@ metadata:
 spec:
   rules:
   - host: endpoint01
-    https:
+    http:
       paths:
       - path: /testpath
         pathType: Prefix
