fix tekton test
Signed-off-by: Mariam Fahmy <mariam.fahmy@nirmata.com>

--- a/tekton-cel/require-tekton-bundle/require-tekton-bundle.yaml
+++ b/tekton-cel/require-tekton-bundle/require-tekton-bundle.yaml
@@ -36,6 +36,9 @@ spec:
       - resources:
           kinds:
           - TaskRun
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         expressions:
