--- a/other/check-ingress-nginx-controller-version-and-annotation-policy/.chainsaw-test/chainsaw-step-01-assert-1.yaml
+++ b/other/check-ingress-nginx-controller-version-and-annotation-policy/.chainsaw-test/chainsaw-step-01-assert-1.yaml
@@ -3,4 +3,8 @@ kind: ClusterPolicy
 metadata:
   name: check-ingress-nginx-controller-version-and-annotation-policy
 status:
-  ready: true
+  conditions:
+  - reason: Succeeded
+    status: "True"
+    type: Ready
+
