--- a/.hack/chainsaw-matrix/workflow.yaml
+++ b/.hack/chainsaw-matrix/workflow.yaml
@@ -11,7 +11,8 @@ on:
   workflow_dispatch: {}
   pull_request:
     branches:
-      - 'main'
+      - main
+      - release-*
 
 concurrency:
   group: {{ print "${{ github.workflow }}-${{ github.ref }}" }}
