--- a/pod-security-cel/restricted/disallow-privilege-escalation/.chainsaw-test/chainsaw-test.yaml
+++ b/pod-security-cel/restricted/disallow-privilege-escalation/.chainsaw-test/chainsaw-test.yaml
@@ -2,7 +2,6 @@
 apiVersion: chainsaw.kyverno.io/v1alpha1
 kind: Test
 metadata:
-  creationTimestamp: null
   name: disallow-privilege-escalation
 spec:
   # disable templating because it can cause issues with CEL expressions
@@ -10,7 +9,7 @@ spec:
   steps:
   - name: step-01
     try:
-    - apply:
+    - create:
         file: ../disallow-privilege-escalation.yaml
     - patch:
         resource:
@@ -24,16 +23,16 @@ spec:
         file: policy-ready.yaml
   - name: step-02
     try:
-    - apply:
+    - create:
         file: pod-good.yaml
-    - apply:
+    - create:
         expect:
         - check:
             ($error != null): true
         file: pod-bad.yaml
-    - apply:
+    - create:
         file: podcontroller-good.yaml
-    - apply:
+    - create:
         expect:
         - check:
             ($error != null): true
