fix disallow-privilege-escalation policy
Signed-off-by: Jim Bugwadia <jim@nirmata.com>

--- a/pod-security-cel/restricted/disallow-privilege-escalation/disallow-privilege-escalation.yaml
+++ b/pod-security-cel/restricted/disallow-privilege-escalation/disallow-privilege-escalation.yaml
@@ -37,6 +37,8 @@ spec:
           expressions:
             - expression: >- 
                 variables.allContainers.all(container, 
+                has(container.securityContext) &&
+                has(container.securityContext.allowPrivilegeEscalation) &&
                 container.securityContext.allowPrivilegeEscalation == false)
               message: >-
                 Privilege escalation is disallowed. 
