--- a/pod-security-cel/restricted/disallow-privilege-escalation/disallow-privilege-escalation.yaml
+++ b/pod-security-cel/restricted/disallow-privilege-escalation/disallow-privilege-escalation.yaml
@@ -37,7 +37,7 @@ spec:
           expressions:
             - expression: >- 
                 variables.allContainers.all(container, 
-                container.?securityContext.?allowPrivilegeEscalation.orValue(true) == false)
+                container.?securityContext.allowPrivilegeEscalation.orValue(true) == false)
               message: >-
                 Privilege escalation is disallowed. 
                 All containers must set the securityContext.allowPrivilegeEscalation field to `false`.
