--- a/.github/actions/run-tests/action.yaml
+++ b/.github/actions/run-tests/action.yaml
@@ -1,9 +1,18 @@
 name: "Runs E2E Tests"
 description: "Runs E2E tests using chainsaw"
 inputs:
+  path:
+    description: Tests path
+    default: '.'
   tests:
     description: "Test regex"
-    required: true
+    default: ''
+  shard-index:
+    description: Shard index
+    default: '0'
+  shard-count:
+    description: Shard count
+    default: '0'
 runs:
   using: "composite"
   steps:
@@ -17,4 +26,9 @@ runs:
       shell: bash
       run: |
         set -e
-        chainsaw test --config .chainsaw.yaml --include-test-regex '^chainsaw$/${{ inputs.tests }}' --no-color=false
+        chainsaw test ${{ inputs.path }} \
+          --config .chainsaw.yaml \
+          --include-test-regex '^chainsaw$/${{ inputs.tests }}' \
+          --shard-index ${{ inputs.shard-index }} \
+          --shard-count ${{ inputs.shard-count }} \
+          --no-color=false
