--- a/pod-security-cel/restricted/disallow-privilege-escalation/.chainsaw-test/podcontroller-bad.yaml
+++ b/pod-security-cel/restricted/disallow-privilege-escalation/.chainsaw-test/podcontroller-bad.yaml
@@ -80,7 +80,7 @@ spec:
       - name: container02
         image: ghcr.io/kyverno/test-busybox:1.35
         securityContext:
-          allowPrivilegeEscalation: true
+          allowPrivilegeEscalation: false
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -99,8 +99,6 @@ spec:
       initContainers:
       - name: initcontainer01
         image: ghcr.io/kyverno/test-busybox:1.35
-        securityContext:
-          allowPrivilegeEscalation: true
       containers:
       - name: container01
         image: ghcr.io/kyverno/test-busybox:1.35
@@ -131,6 +129,8 @@ spec:
       containers:
       - name: container01
         image: ghcr.io/kyverno/test-busybox:1.35
+        securityContext:
+          allowPrivilegeEscalation: false
 ---
 apiVersion: batch/v1
 kind: CronJob
@@ -178,12 +178,10 @@ spec:
           containers:
           - name: container01
             image: ghcr.io/kyverno/test-busybox:1.35
-            securityContext:
-              allowPrivilegeEscalation: true
           - name: container02
             image: ghcr.io/kyverno/test-busybox:1.35
             securityContext:
-              allowPrivilegeEscalation: true
+              allowPrivilegeEscalation: false
 ---
 apiVersion: batch/v1
 kind: CronJob
@@ -224,7 +222,7 @@ spec:
           - name: container01
             image: ghcr.io/kyverno/test-busybox:1.35
             securityContext:
-              allowPrivilegeEscalation: true
+              allowPrivilegeEscalation: false
 ---
 apiVersion: batch/v1
 kind: CronJob
@@ -248,5 +246,5 @@ spec:
           - name: container01
             image: ghcr.io/kyverno/test-busybox:1.35
             securityContext:
-              allowPrivilegeEscalation: true
+              allowPrivilegeEscalation: false
 ---
