--- a/flux/verify-flux-images/.chainsaw-test/chainsaw-test.yaml
+++ b/flux/verify-flux-images/.chainsaw-test/chainsaw-test.yaml
@@ -29,7 +29,7 @@ spec:
           LATESTTAG=$(oras repo tags $IMAGEREPO | egrep "^v[0-9]+.[0-9]+.[0-9]+$" | sort -V | tail -n1)
           MANIFEST=pod-ghcr-source-controller.yaml
           echo "Latest version of $IMAGEREPO is $LATESTTAG"
-          sed -i "s/replacethistag/${LATESTTAG}/g" $MANIFEST
+          sed -i.bak "s/replacethistag/${LATESTTAG}/g" $MANIFEST && rm $MANIFEST.bak
           echo "Replaced image is now $(yq e .spec.containers[0].image $MANIFEST)"
   - name: 03 - Verify fluxcd/source-controller
     try:
@@ -45,7 +45,7 @@ spec:
           LATESTTAG=$(oras repo tags $IMAGEREPO | egrep "^v[0-9]+.[0-9]+.[0-9]+$" | sort -V | tail -n1)
           MANIFEST=pod-ghcr-kustomize-controller.yaml
           echo "Latest version of $IMAGEREPO is $LATESTTAG"
-          sed -i "s/replacethistag/${LATESTTAG}/g" $MANIFEST
+          sed -i.bak "s/replacethistag/${LATESTTAG}/g" $MANIFEST && rm $MANIFEST.bak
           echo "Replaced image is now $(yq e .spec.containers[0].image $MANIFEST)"
   - name: 05 - Verify fluxcd/kustomize-controller
     try:
@@ -61,7 +61,7 @@ spec:
           LATESTTAG=$(oras repo tags $IMAGEREPO | egrep "^v[0-9]+.[0-9]+.[0-9]+$" | sort -V | tail -n1)
           MANIFEST=pod-ghcr-helm-controller.yaml
           echo "Latest version of $IMAGEREPO is $LATESTTAG"
-          sed -i "s/replacethistag/${LATESTTAG}/g" $MANIFEST
+          sed -i.bak "s/replacethistag/${LATESTTAG}/g" $MANIFEST && rm $MANIFEST.bak
           echo "Replaced image is now $(yq e .spec.containers[0].image $MANIFEST)"
   - name: 07 - Verify fluxcd/helm-controller
     try:
@@ -77,7 +77,7 @@ spec:
           LATESTTAG=$(oras repo tags $IMAGEREPO | egrep "^v[0-9]+.[0-9]+.[0-9]+$" | sort -V | tail -n1)
           MANIFEST=pod-ghcr-notification-controller.yaml
           echo "Latest version of $IMAGEREPO is $LATESTTAG"
-          sed -i "s/replacethistag/${LATESTTAG}/g" $MANIFEST
+          sed -i.bak "s/replacethistag/${LATESTTAG}/g" $MANIFEST && rm $MANIFEST.bak
           echo "Replaced image is now $(yq e .spec.containers[0].image $MANIFEST)"
   - name: 09 - Verify fluxcd/notification-controller
     try:
@@ -93,7 +93,7 @@ spec:
           LATESTTAG=$(oras repo tags $IMAGEREPO | egrep "^v[0-9]+.[0-9]+.[0-9]+$" | sort -V | tail -n1)
           MANIFEST=pod-ghcr-image-reflector-controller.yaml
           echo "Latest version of $IMAGEREPO is $LATESTTAG"
-          sed -i "s/replacethistag/${LATESTTAG}/g" $MANIFEST
+          sed -i.bak "s/replacethistag/${LATESTTAG}/g" $MANIFEST && rm $MANIFEST.bak
           echo "Replaced image is now $(yq e .spec.containers[0].image $MANIFEST)"
   - name: 11 - Verify fluxcd/image-reflector-controller
     try:
@@ -109,7 +109,7 @@ spec:
           LATESTTAG=$(oras repo tags $IMAGEREPO | egrep "^v[0-9]+.[0-9]+.[0-9]+$" | sort -V | tail -n1)
           MANIFEST=pod-ghcr-image-automation-controller.yaml
           echo "Latest version of $IMAGEREPO is $LATESTTAG"
-          sed -i "s/replacethistag/${LATESTTAG}/g" $MANIFEST
+          sed -i.bak "s/replacethistag/${LATESTTAG}/g" $MANIFEST && rm $MANIFEST.bak
           echo "Replaced image is now $(yq e .spec.containers[0].image $MANIFEST)"
   - name: 13 - Verify fluxcd/image-automation-controller
     try:
