Simplified disallow-capabilities-strict policy
Signed-off-by: mahesh <maheshcodes12@gmail.com>

--- a/pod-security-cel/restricted/disallow-capabilities-strict/disallow-capabilities-strict.yaml
+++ b/pod-security-cel/restricted/disallow-capabilities-strict/disallow-capabilities-strict.yaml
@@ -29,27 +29,21 @@ spec:
       validate:
         message: >-
           Containers must drop `ALL` capabilities.
-        cel: 
+        cel:
+          variables:
+            - name: allContainers
+              expression: >-
+                (has(object.spec.containers) ? object.spec.containers : []) +
+                (has(object.spec.initContainers) ? object.spec.initContainers : []) +
+                (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : [])
           expressions:
-            - expression: >- 
-                object.spec.containers.all(container, has(container.securityContext) &&
-                has(container.securityContext.capabilities) &&
-                has(container.securityContext.capabilities.drop) &&
-                container.securityContext.capabilities.drop.exists_one(capability, capability == 'ALL'))
-    
-            - expression: >- 
-                !has(object.spec.initContainers) ||
-                object.spec.initContainers.all(container, has(container.securityContext) &&
-                has(container.securityContext.capabilities) &&
-                has(container.securityContext.capabilities.drop) &&
-                container.securityContext.capabilities.drop.exists_one(capability, capability == 'ALL'))
-            
-            - expression: >- 
-                !has(object.spec.ephemeralContainers) ||
-                object.spec.ephemeralContainers.all(container, has(container.securityContext) &&
-                has(container.securityContext.capabilities) &&
-                has(container.securityContext.capabilities.drop) &&
-                container.securityContext.capabilities.drop.exists_one(capability, capability == 'ALL'))
+            - expression: >-
+                variables.allContainers.all(container,
+                  has(container.securityContext) &&
+                  has(container.securityContext.capabilities) &&
+                  has(container.securityContext.capabilities.drop) &&
+                  container.securityContext.capabilities.drop.exists_one(capability, capability == 'ALL')
+                )
     - name: adding-capabilities-strict
       match:
         any:
@@ -61,29 +55,22 @@ spec:
             - UPDATE
       validate:
         cel:
+          variables:
+            - name: allContainers
+              expression: >-
+                (has(object.spec.containers) ? object.spec.containers : []) +
+                (has(object.spec.initContainers) ? object.spec.initContainers : []) +
+                (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : [])
           expressions:
-          - expression: >- 
-              object.spec.containers.all(container, !has(container.securityContext) ||
-              !has(container.securityContext.capabilities) ||
-              !has(container.securityContext.capabilities.add) ||
-              ((size(container.securityContext.capabilities.add) == 1) && (container.securityContext.capabilities.add[0] == 'NET_BIND_SERVICE')))
-            message: >-
-              Any capabilities added other than NET_BIND_SERVICE are disallowed.
-    
-          - expression: >- 
-              !has(object.spec.initContainers) ||
-              object.spec.initContainers.all(container, !has(container.securityContext) ||
-              !has(container.securityContext.capabilities) ||
-              !has(container.securityContext.capabilities.add) ||
-              ((size(container.securityContext.capabilities.add) == 1) && (container.securityContext.capabilities.add[0] == 'NET_BIND_SERVICE')))
-            message: >-
-              Any capabilities added other than NET_BIND_SERVICE are disallowed.
-          
-          - expression: >- 
-              !has(object.spec.ephemeralContainers) ||
-              object.spec.ephemeralContainers.all(container, !has(container.securityContext) ||
-              !has(container.securityContext.capabilities) ||
-              !has(container.securityContext.capabilities.add) ||
-              ((size(container.securityContext.capabilities.add) == 1) && (container.securityContext.capabilities.add[0] == 'NET_BIND_SERVICE')))
-            message: >-
-              Any capabilities added other than NET_BIND_SERVICE are disallowed.
+            - expression: >-
+                variables.allContainers.all(container,
+                  !has(container.securityContext) ||
+                  !has(container.securityContext.capabilities) ||
+                  !has(container.securityContext.capabilities.add) ||
+                  (
+                    size(container.securityContext.capabilities.add) == 1 &&
+                    container.securityContext.capabilities.add[0] == 'NET_BIND_SERVICE'
+                  )
+                )
+              message: >-
+                Any capabilities added other than NET_BIND_SERVICE are disallowed.
