--- a/pod-security-cel/restricted/restrict-seccomp-strict/restrict-seccomp-strict.yaml
+++ b/pod-security-cel/restricted/restrict-seccomp-strict/restrict-seccomp-strict.yaml
@@ -23,19 +23,17 @@ spec:
     - name: check-seccomp-strict
       match:
         any:
-        - resources:
-            kinds:
-              - Pod
-            operations:
-            - CREATE
-            - UPDATE
+          - resources:
+              kinds:
+                - Pod
+              operations:
+                - CREATE
+                - UPDATE
       validate:
         cel:
           expressions:
             - expression: >- 
-                !has(object.spec.securityContext) ||
-                !has(object.spec.securityContext.seccompProfile) ||
-                !has(object.spec.securityContext.seccompProfile.type) ||
+                !object.spec.?securityContext.?seccompProfile.?type.hasValue() ||
                 object.spec.securityContext.seccompProfile.type == 'RuntimeDefault' ||
                 object.spec.securityContext.seccompProfile.type == 'Localhost'
               message: >-
@@ -43,33 +41,31 @@ spec:
                 spec.securityContext.seccompProfile.type must be set to `RuntimeDefault` or `Localhost`.
       
             - expression: >- 
-                object.spec.containers.all(container, !has(container.securityContext) ||
-                !has(container.securityContext.seccompProfile) ||
-                !has(container.securityContext.seccompProfile.type) ||
-                container.securityContext.seccompProfile.type == 'RuntimeDefault' ||
-                container.securityContext.seccompProfile.type == 'Localhost')
+                object.spec.containers.all(container,
+                  !container.?securityContext.?seccompProfile.?type.hasValue() ||
+                  container.securityContext.seccompProfile.type == 'RuntimeDefault' ||
+                  container.securityContext.seccompProfile.type == 'Localhost'
+                )
               message: >-
                 Use of custom Seccomp profiles is disallowed. The field
                 spec.containers[*].securityContext.seccompProfile.type must be set to `RuntimeDefault` or `Localhost`.
               
             - expression: >- 
-                !has(object.spec.initContainers) ||
-                object.spec.initContainers.all(container, !has(container.securityContext) ||
-                !has(container.securityContext.seccompProfile) ||
-                !has(container.securityContext.seccompProfile.type) ||
-                container.securityContext.seccompProfile.type == 'RuntimeDefault' ||
-                container.securityContext.seccompProfile.type == 'Localhost')
+                object.spec.?initContainers.orValue([]).all(container,
+                  !container.?securityContext.?seccompProfile.?type.hasValue() ||
+                  container.securityContext.seccompProfile.type == 'RuntimeDefault' ||
+                  container.securityContext.seccompProfile.type == 'Localhost'
+                )
               message: >-
                 Use of custom Seccomp profiles is disallowed. The field
                 spec.initContainers[*].securityContext.seccompProfile.type must be set to `RuntimeDefault` or `Localhost`.
 
             - expression: >- 
-                !has(object.spec.ephemeralContainers) ||
-                object.spec.ephemeralContainers.all(container, !has(container.securityContext) ||
-                !has(container.securityContext.seccompProfile) ||
-                !has(container.securityContext.seccompProfile.type) ||
-                container.securityContext.seccompProfile.type == 'RuntimeDefault' ||
-                container.securityContext.seccompProfile.type == 'Localhost')
+                object.spec.?ephemeralContainers.orValue([]).all(container,
+                  !container.?securityContext.?seccompProfile.?type.hasValue() ||
+                  container.securityContext.seccompProfile.type == 'RuntimeDefault' ||
+                  container.securityContext.seccompProfile.type == 'Localhost'
+                )
               message: >-
                 Use of custom Seccomp profiles is disallowed. The field
                 spec.ephemeralContainers[*].securityContext.seccompProfile.type must be set to `RuntimeDefault` or `Localhost`.
